--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 VITE_DATA_SOURCE_MODE=api
 
 # API Configuration
-VITE_API_BASE_URL=http://localhost:5000
+VITE_API_BASE_URL=https://bm4xghjnf9.execute-api.eu-west-1.amazonaws.com/staging
 
 # Environment
 NODE_ENV=production
